<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_publicVotes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_public_votes" />
        <item
            android:id="@+id/nav_privateVotes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_private_votes" />
        <item
            android:id="@+id/nav_startedVotes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_started_votes" />
    </group>

    <item android:title="@string/user">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout" />
                <item
                    android:id="@+id/nav_signup"
                    android:icon="@drawable/ic_menu_signup"
                    android:title="@string/menu_register" />
            </group>
        </menu>
    </item>
</menu>