<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_publicVotes">

    <fragment
        android:id="@+id/nav_publicVotes"
        android:name="com.mapare.maparevoteapp.tab.votes.PublicVotesFragment"
        android:label="@string/menu_public_votes"
        tools:layout="@layout/fragment_votes" />

    <fragment
        android:id="@+id/nav_privateVotes"
        android:name="com.mapare.maparevoteapp.tab.votes.PrivateVotesFragment"
        android:label="@string/menu_private_votes"
        tools:layout="@layout/fragment_votes" />

    <fragment
        android:id="@+id/nav_startedVotes"
        android:name="com.mapare.maparevoteapp.tab.votes.StartedVotesFragment"
        android:label="@string/menu_started_votes"
        tools:layout="@layout/fragment_votes" />

    <fragment
        android:id="@+id/nav_votedVotes"
        android:name="com.mapare.maparevoteapp.tab.votes.VotedVotesFragment"
        android:label="@string/menu_voted_votes"
        tools:layout="@layout/fragment_votes" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.mapare.maparevoteapp.tab.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.mapare.maparevoteapp.tab.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />
</navigation>